--- a/src/main/java/properties/config.properties
+++ b/src/main/java/properties/config.properties
@@ -1,4 +1,4 @@
-Project=Teste de criação de framework
+Project=Framework Creation Test
 Sprint=1
 Browser=CHROME
-Logo=logo.png
+Logo=monsanto-logo.png
