--- a/pom.xml
+++ b/pom.xml
@@ -81,11 +81,11 @@
 	<!-- End of REST dependencies -->
     
     <!-- Start of Utility dependencies -->
-	<!-- https://mvnrepository.com/artifact/log4j/apache-log4j-extras -->
+    <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
 	<dependency>
-	    <groupId>log4j</groupId>
-	    <artifactId>apache-log4j-extras</artifactId>
-	    <version>1.2.17</version>
+	    <groupId>org.apache.logging.log4j</groupId>
+	    <artifactId>log4j-core</artifactId>
+	    <version>2.11.1</version>
 	</dependency>
 	
 	<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
@@ -94,12 +94,11 @@
 	    <artifactId>log4j-api</artifactId>
 	    <version>2.11.1</version>
 	</dependency>
-
 	
-	<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+	<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-web -->
 	<dependency>
 	    <groupId>org.apache.logging.log4j</groupId>
-	    <artifactId>log4j-core</artifactId>
+	    <artifactId>log4j-web</artifactId>
 	    <version>2.11.1</version>
 	</dependency>
 	
@@ -116,6 +115,13 @@
 	    <groupId>org.apache.poi</groupId>
 	    <artifactId>poi-ooxml</artifactId>
 	    <version>3.17</version>
+	</dependency>
+
+	<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+	<dependency>
+	    <groupId>mysql</groupId>
+	    <artifactId>mysql-connector-java</artifactId>
+	    <version>8.0.12</version>
 	</dependency>
 
     <!-- End of Utility dependencies -->
