Removed Logo Scaling dependencies

--- a/src/main/java/properties/config.properties
+++ b/src/main/java/properties/config.properties
@@ -2,4 +2,8 @@ Project=Framework Creation Test
 Sprint=1
 Browser=CHROME
 UDID=None
-Logo=climate-logo.jpg
+Logo=logo.png
+Logo-Scaling=7f
+HCR=60
+HCG=60
+HCB=60
