--- a/src/main/java/properties/config.properties
+++ b/src/main/java/properties/config.properties
@@ -1,7 +1,7 @@
 Project=Framework Creation Test
 Sprint=1
 Browser=CHROME
-UDID=None
+UDID=9b765d57c37f7f6f1771d5be175f90430b5190cd
 Logo=logo.png
 Logo-Scaling=7f
 HCR=60
