--- a/src/main/java/properties/config.properties
+++ b/src/main/java/properties/config.properties
@@ -1,6 +1,7 @@
 Project=Framework Creation Test
 Sprint=1
 Browser=CHROME
+Device=iPad Air 2
 UDID=9b765d57c37f7f6f1771d5be175f90430b5190cd
 Logo=logo.png
 Logo-Scaling=7f
