--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ src/main/java/pageObjects/CabApp/Maps.java
 src/main/java/pageObjects/CabApp/HomeScreen.java
 src/main/java/pageObjects/CabApp/Equipments.java
 src/test/java/testScenarios/MobileiOSExample.java
+src/main/java/pageObjects/CabApp/Settings.java
+src/main/java/pageObjects/CabApp/Fields.java
